--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "daisyui": "^2.15.2",
+    "firebase": "^9.9.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-calendar": "^3.7.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.33.1",
     "react-icons": "^4.3.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
