--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "daisyui": "^2.15.2",
     "firebase": "^9.9.0",
-    "next": "12.1.6",
-    "react": "18.1.0",
+    "next": "^12.2.2",
+    "react": "^18.1.0",
     "react-calendar": "^3.7.0",
-    "react-dom": "18.1.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "^18.1.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
