--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@types/react-redux": "^7.1.24",
+    "cookie": "^0.5.0",
     "daisyui": "^2.15.2",
     "firebase": "^9.9.0",
     "next": "^12.2.2",
@@ -20,11 +22,15 @@
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "@types/node": "17.0.36",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
