--- a/package.json
+++ b/package.json
@@ -11,15 +11,26 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@types/draft-js": "^0.11.9",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-redux": "^7.1.24",
+    "and": "^0.0.3",
+    "axios": "^0.27.2",
     "cookie": "^0.5.0",
     "daisyui": "^2.15.2",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^9.9.0",
+    "html-dom-parser": "^3.0.1",
+    "html-parser": "^0.11.0",
+    "html-react-parser": "^3.0.1",
+    "htmlparser2": "^8.0.1",
     "next": "^12.2.2",
     "react": "^18.1.0",
     "react-calendar": "^3.7.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.1.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
