--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-
-# dependencies
 /node_modules
 /.pnp
 .pnp.js
@@ -16,19 +14,14 @@
 
 # misc
 .DS_Store
-*.pem
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
