--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-redux": "^7.1.24",
     "and": "^0.0.3",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.2",
     "cookie": "^0.5.0",
     "daisyui": "^2.15.2",
     "draft-js": "^0.11.7",
