--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "and": "^0.0.3",
     "axios": "^0.27.2",
     "chart.js": "^3.8.2",
+    "chartjs": "^0.3.24",
     "cookie": "^0.5.0",
     "daisyui": "^2.15.2",
     "draft-js": "^0.11.7",
@@ -42,6 +43,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.37",
     "@types/cookie": "^0.5.1",
     "@types/node": "17.0.36",
     "@types/react": "18.0.9",
