--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chartjs": "^0.3.24",
     "cookie": "^0.5.0",
     "daisyui": "^2.15.2",
+    "date-fns": "^2.29.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "firebase": "^9.9.0",
@@ -31,6 +32,7 @@
     "react": "^18.1.0",
     "react-calendar": "^3.7.0",
     "react-chartjs-2": "^4.3.1",
+    "react-day-picker": "^8.0.7",
     "react-dom": "^18.1.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.33.1",
@@ -38,6 +40,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.4",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1"
