--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@reduxjs/toolkit": "^2.2.8",
+    "@stripe/react-stripe-js": "^1.16.5",
+    "@stripe/stripe-js": "^4.8.0",
     "@types/draft-js": "^0.11.9",
     "@types/react-draft-wysiwyg": "^1.13.4",
-    "@types/react-redux": "^7.1.24",
+    "@types/react-redux": "^7.1.34",
     "and": "^0.0.3",
     "axios": "^0.27.2",
     "chart.js": "^3.8.2",
@@ -36,27 +39,29 @@
     "react-dom": "^18.1.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.33.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.3.1",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.4",
-    "redux": "^4.2.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.37",
     "@types/cookie": "^0.5.1",
-    "@types/node": "17.0.36",
-    "@types/react": "18.0.9",
+    "@types/node": "22.7.5",
+    "@types/react": "18.3.11",
     "@types/react-dom": "18.0.5",
     "@types/react-slick": "^0.23.8",
     "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
-    "sass": "^1.52.1",
+    "sass": "^1.79.4",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
   }
